--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,58 +1,64 @@
 {
   "name": "RealEstateCRM",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "AppEntry.js",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
-    "build": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle",
-    "build:ios": "react-native bundle --platform ios --dev false --entry-file index.js --bundle-output ios/main.jsbundle",
-    "clean": "rm -rf node_modules && rm -rf ios/build && rm -rf android/build && npm install",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "start": "npx expo start",
+    "web": "expo start --web",
+    "build": "expo build:android",
+    "build:ios": "expo build:ios",
+    "clean": "rm -rf node_modules && npm install",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "typecheck": "tsc --noEmit",
-    "postinstall": "cd ios && pod install && cd .."
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@expo/cli": "^0.18.0",
+    "@expo/metro-config": "^0.18.0",
+    "@expo/metro-runtime": "~3.1.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-community/netinfo": "^9.4.1",
+    "@react-native-community/netinfo": "11.1.0",
     "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
+    "expo": "^50.0.0",
+    "expo-font": "~11.10.3",
+    "expo-splash-screen": "^0.30.10",
     "react": "18.2.0",
-    "react-native": "0.72.4",
+    "react-dom": "18.2.0",
+    "react-native": "0.73.0",
     "react-native-calendars": "^1.1302.0",
     "react-native-config": "^1.5.1",
     "react-native-document-picker": "^9.1.1",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.12.1",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "^5.10.4",
-    "react-native-reanimated": "^3.5.4",
-    "react-native-safe-area-context": "^4.7.2",
-    "react-native-screens": "^3.25.0",
-    "react-native-svg": "^13.9.0",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-reanimated": "~3.6.0",
+    "react-native-safe-area-context": "4.8.0",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
+    "react-native-vector-icons": "^10.0.0",
+    "react-native-web": "^0.19.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
-    "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
-    "@types/react": "^18.0.24",
-    "@types/react-test-renderer": "^18.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-test-renderer": "^18.2.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
