--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,39 @@
     "clean": "rm -rf node_modules && npm install",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "typecheck": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:unit": "jest --testPathPattern=unit",
+    "test:component": "jest --testPathPattern=component",
+    "test:integration": "jest --testPathPattern=integration",
+    "test:e2e": "jest --testPathPattern=e2e",
+    "test:accessibility": "jest --testPathPattern=accessibility",
+    "test:performance": "jest --testPathPattern=performance",
     "test:coverage": "jest --coverage",
-    "typecheck": "tsc --noEmit"
+    "test:coverage:analysis": "node test-coverage-analysis.js",
+    "test:coverage:dashboard": "open coverage-dashboard.html",
+    "test:full-suite": "npm run test:coverage && npm run test:coverage:analysis",
+    "test:automated": "bash ../../scripts/run-automated-tests.sh",
+    "test:automated:unit": "bash ../../scripts/run-automated-tests.sh unit",
+    "test:automated:component": "bash ../../scripts/run-automated-tests.sh component",
+    "test:automated:integration": "bash ../../scripts/run-automated-tests.sh integration",
+    "test:automated:e2e": "bash ../../scripts/run-automated-tests.sh e2e",
+    "test:automated:accessibility": "bash ../../scripts/run-automated-tests.sh accessibility",
+    "test:automated:performance": "bash ../../scripts/run-automated-tests.sh performance",
+    "test:automated:coverage": "bash ../../scripts/run-automated-tests.sh coverage",
+    "test:automated:backend": "bash ../../scripts/run-automated-tests.sh backend",
+    "test:automated:setup": "bash ../../scripts/run-automated-tests.sh setup",
+    "test:scheduler:start": "node ../../scripts/test-scheduler.js start",
+    "test:scheduler:stop": "node ../../scripts/test-scheduler.js stop",
+    "test:scheduler:status": "node ../../scripts/test-scheduler.js status",
+    "test:scheduler:run-daily": "node ../../scripts/test-scheduler.js run daily-full",
+    "test:scheduler:run-hourly": "node ../../scripts/test-scheduler.js run hourly-smoke",
+    "test:reporting:daily": "node ../../scripts/automated-reporting.js daily",
+    "test:reporting:weekly": "node ../../scripts/automated-reporting.js weekly",
+    "test:ci": "npm run lint && npm run typecheck && npm run test:coverage",
+    "test:pre-commit": "npm run lint && npm run test:unit",
+    "test:pre-push": "npm run test:full-suite && npm run test:accessibility"
   },
   "dependencies": {
     "@expo/cli": "^0.18.0",
@@ -61,6 +90,7 @@
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
+    "jest-environment-jsdom": "^30.1.2",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
