--- a/frontend/package.json
+++ b/frontend/package.json
@@ -91,6 +91,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "jest-environment-jsdom": "^30.1.2",
+    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
