--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,17 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
+    "start:ts": "node dist/server.js",
+    "dev:ts": "nodemon --exec ts-node src-ts/server.ts",
+    "build:ts": "tsc",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:ts": "jest --config jest.config.ts",
+    "test:ts:watch": "jest --config jest.config.ts --watch",
+    "test:ts:coverage": "jest --config jest.config.ts --coverage",
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix",
+    "lint:ts": "eslint src-ts/ --ext .ts",
     "docs": "swagger-jsdoc -d swaggerDef.js src/routes/*.js -o swagger.json",
     "migrate": "node src/migrations/cli.js migrate",
     "migrate:status": "node src/migrations/cli.js status",
@@ -55,12 +62,26 @@
     "winston": "^3.11.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/compression": "^1.8.1",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.6.1",
+    "@types/pg": "^8.15.5",
+    "@types/supertest": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/parser": "^8.45.0",
     "eslint": "^8.55.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.4.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   },
   "engines": {
     "node": ">=16.0.0",
